<resources>
    <string name="app_name">Get Wireless Nodes</string>
    <string name="button_scan">Start Scan</string>
    <string name="BSSID">MAC:</string>
    <string name="SSID">NAME:</string>
    <string name="type">TYPE:</string>
    <string name="level">LEVEL:</string>
    <string name="frequency">FREQUENCY:</string>
    <string name="capabilities">CAPABILITIES:</string>
    <string name="menu_item_settings">Settings</string>
    <string name="prf_save_data_to_db_title">Save Data To DB</string>
    <string name="prf_db_path_title">DB File Path</string>
    <string name="db_path_default_value">/sdcard</string>
    <string name="prf_refresh_time_title">Data refresh time</string>
    <string name="prf_database_category_title">DataBase Preferences</string>
    <string name="prf_application_settings">Application Settings</string>
    <string name="prf_nodes_type_title">Nodes to discover</string>
</resources>
